tests/errors/tc_stmt_main_rettype.lx
@module "main"

pub const main -> fn () str {
    return "hello";
}
